# openfst

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
patch/src/include/fst/: flags.h
